--- a/pkgbuild/PKGBUILD
+++ b/pkgbuild/PKGBUILD
@@ -16,5 +16,5 @@ build() {
 
 package() {
     cd "$pkgname-$pkgver"
-    make DESTDIR="$pkgdir/usr/bin" install
+    make DESTDIR="$pkgdir" install
 }
